--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -9,7 +9,7 @@
 <f:view contentType="text/html">
     <h:head>
         <meta content='text/html; charset=UTF-8' http-equiv="Content-Type" />
-	<title>SI CAPITA</title>
+	<title>SI CAPITAL</title>
         <link type="text/css" rel="stylesheet"
 	href="#{facesContext.externalContext.requestContextPath}/resource/css/estilos.css" />
         <script type="text/javascript" charset="UTF-8"
