Actualizar enlace de javascript

--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -12,8 +12,10 @@
 	<title>SI CAPITAL</title>
         <link type="text/css" rel="stylesheet"
 	href="#{facesContext.externalContext.requestContextPath}/resource/css/estilos.css" />
+        <link type="text/css" rel="stylesheet"
+	href="#{facesContext.externalContext.requestContextPath}/resource/css/estilosestudiosprevios.css" />
         <script type="text/javascript" charset="UTF-8"
-	src="#{facesContext.externalContext.requestContextPath}/js/funciones.js?v=1.0.0.16" />
+	src="#{facesContext.externalContext.requestContextPath}/resource/js/funciones.js?v=1.0.0.16" />
         <style type="text/css">
             
         </style>
