--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -15,7 +15,7 @@
         <link type="text/css" rel="stylesheet"
 	href="#{facesContext.externalContext.requestContextPath}/resource/css/estilosestudiosprevios.css" />
         <script type="text/javascript" charset="UTF-8"
-	src="#{facesContext.externalContext.requestContextPath}/js/funciones.js?v=1.0.0.16" />
+	src="#{facesContext.externalContext.requestContextPath}/resource/js/funciones.js?" />
 
     </h:head>
 <h:body>
